fix spacing with images and titles, and change new botton border to black

--- a/css/styles.css
+++ b/css/styles.css
@@ -71,7 +71,7 @@ p {
   margin: auto;
   width: 20%;
   height: 50px;
-  border: 2px solid orange;
+  border: 2px solid black;
   padding: 10px;
   margin-bottom: 50px;
 }
@@ -139,6 +139,8 @@ p {
   display: block;
   margin-left: auto;
   margin-right: auto;
+  padding-top: 50px;
+  padding-bottom: 50px;
 }
 
 #crazy8 img {
@@ -165,7 +167,7 @@ p {
 }
 
 .information h2 {
-  padding-top: 20px;
+  padding-top: 80px;
   padding-bottom: 15px;
   border-bottom: 2px solid black;
 }
